--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
       content="Web site created using create-react-app"
     />
     <title>Book Store</title>
+    <script src="https://kit.fontawesome.com/094da245c0.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
