--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,9 @@
       content="Web site created using create-react-app"
     />
     <title>Book Store</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300;400&family=Roboto:wght@300;400&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/094da245c0.js" crossorigin="anonymous"></script>
   </head>
   <body>
